Replace logo image with PDA token icon

--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -196,7 +196,7 @@
 
 <div class="container">
   <div class="title">
-    <img src="images/pandapawnshop.jpg" alt="Panda Pawn Shop">
+    <img src="images/x-icon/pda-token-transparent.png" alt="Panda Pawn Shop">
   </div>
 
   <div class="summary">
