--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -196,7 +196,7 @@
 
 <div class="container">
   <div class="title">
-    <img src="images/x-icon/pda-token-transparent.png" alt="Panda Pawn Shop">
+    <img src="images/pandapawnshop.jpg" alt="Panda Pawn Shop">
   </div>
 
   <div class="summary">
@@ -299,7 +299,7 @@ document.getElementById("connect-wallet-btn").addEventListener("click", async ()
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
         appName: "Panda Pawn Shop",
-        appLogo: "images/pandapawnshop-logo.png" // make sure this exists
+        appLogo: "images/pandapawnshop.jpg" // make sure this exists
       },
       transportOptions: { requestAccount: "xprpandas" }
     });
