--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -6,187 +6,143 @@
 <title>Panda Pawn Shop</title>
 
 <style>
-  body {
-    margin: 0;
-    font-family: 'Orbitron', Arial, sans-serif;
-    background: #000;
-    color: #f5e9ff;
-  }
+body {
+  margin: 0;
+  font-family: 'Orbitron', Arial, sans-serif;
+  background: #000;
+  color: #f5e9ff;
+}
 
-  /* Wallet Button */
-  #walletBar {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 50;
-  }
+#walletBar {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 50;
+}
 
-  #connect-wallet-btn {
-    padding: 14px 22px;
-    font-size: 1.05em;
-    font-weight: bold;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    background: linear-gradient(135deg, #bb33ff, #7a2bf8);
-    color: white;
-    box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
-    animation: neonPulse 2s infinite;
-  }
+#connect-wallet-btn {
+  padding: 14px 22px;
+  font-size: 1.05em;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background: linear-gradient(135deg, #bb33ff, #7a2bf8);
+  color: white;
+  box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
+  animation: neonPulse 2s infinite;
+}
 
-  @keyframes neonPulse {
-    0%,100% { box-shadow: 0 0 12px #bb33ff,0 0 26px #a020f0,0 0 48px #bb33ff; }
-    50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff,0 0 90px #d175ff; }
-  }
+@keyframes neonPulse {
+  0%,100% { box-shadow: 0 0 12px #bb33ff,0 0 26px #a020f0,0 0 48px #bb33ff; }
+  50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff,0 0 90px #d175ff; }
+}
 
-  #wallet-display {
-    margin-top: 10px;
-    font-size: 0.95em;
-    color: #caffff;
-  }
+#wallet-display {
+  margin-top: 10px;
+  font-size: 0.95em;
+  color: #caffff;
+}
 
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 120px 20px 60px;
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 120px 20px 60px;
+}
 
-  .title {
-    text-align: center;
-    margin-bottom: 30px;
-  }
+.title {
+  text-align: center;
+  margin-bottom: 30px;
+}
 
-  .title img {
-    max-width: 420px;
-    width: 90%;
-    filter: drop-shadow(0 0 18px #bb33ff)
-            drop-shadow(0 0 36px #a020f0)
-            drop-shadow(0 0 64px #bb33ff);
-    animation: titleGlow 2.2s infinite ease-in-out;
-  }
+.title img {
+  max-width: 420px;
+  width: 90%;
+  filter: drop-shadow(0 0 18px #bb33ff)
+          drop-shadow(0 0 36px #a020f0)
+          drop-shadow(0 0 64px #bb33ff);
+}
 
-  @keyframes titleGlow {
-    0%,100% {
-      filter: drop-shadow(0 0 18px #bb33ff)
-              drop-shadow(0 0 36px #a020f0)
-              drop-shadow(0 0 64px #bb33ff);
-    }
-    50% {
-      filter: drop-shadow(0 0 30px #d175ff)
-              drop-shadow(0 0 60px #bb33ff)
-              drop-shadow(0 0 110px #d175ff);
-    }
-  }
+.summary {
+  max-width: 780px;
+  margin: 0 auto 50px;
+  text-align: center;
+  line-height: 1.7;
+  font-size: 1.05em;
+  color: #dacafa;
+}
 
-  .summary {
-    max-width: 780px;
-    margin: 0 auto 50px;
-    text-align: center;
-    line-height: 1.7;
-    font-size: 1.05em;
-    color: #dacafa;
-  }
+.section {
+  background: #120c1f;
+  border: 2px solid #7a2bf8;
+  border-radius: 18px;
+  padding: 24px;
+  margin-bottom: 40px;
+  box-shadow: 0 0 24px rgba(122,43,248,0.35);
+}
 
-  .section {
-    background: #120c1f;
-    border: 2px solid #7a2bf8;
-    border-radius: 18px;
-    padding: 24px;
-    margin-bottom: 40px;
-    box-shadow: 0 0 24px rgba(122,43,248,0.35);
-  }
+.section h2 {
+  margin-top: 0;
+  color: #e2c7ff;
+}
 
-  .section h2 {
-    margin-top: 0;
-    color: #e2c7ff;
-    text-shadow: 0 0 10px #bb33ff;
-  }
+.nft-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 18px;
+}
 
-  .nft-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 18px;
-  }
+.nft-card {
+  background: #000;
+  border-radius: 14px;
+  border: 2px solid #453c2c;
+  padding: 12px;
+  text-align: center;
+  cursor: pointer;
+}
 
-  .nft-card {
-    background: #000;
-    border-radius: 14px;
-    border: 2px solid #453c2c;
-    padding: 12px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
+.nft-card:hover {
+  box-shadow: 0 0 18px #bb33ff;
+}
 
-  .nft-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 0 18px #bb33ff;
-  }
+.nft-card img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 8px;
+}
 
-  .nft-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 8px;
-  }
+.preview {
+  text-align: center;
+}
 
-  .preview {
-    text-align: center;
-  }
+.preview img {
+  max-width: 260px;
+  border-radius: 18px;
+  border: 3px solid #bb33ff;
+}
 
-  .preview img {
-    max-width: 260px;
-    border-radius: 18px;
-    border: 3px solid #bb33ff;
-    box-shadow: 0 0 28px rgba(187,51,255,0.6);
-  }
+.action-btn {
+  margin-top: 18px;
+  padding: 14px 28px;
+  border-radius: 12px;
+  border: none;
+  font-size: 1.05em;
+  font-weight: bold;
+  background: linear-gradient(135deg, #bb33ff, #892dff);
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+}
 
-  .loan-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 18px;
-  }
-
-  .loan-box {
-    background:#000;
-    border:2px solid #453c2c;
-    border-radius:14px;
-    padding:16px;
-    text-align:center;
-  }
-
-  .action-btn {
-    margin-top: 18px;
-    padding: 14px 28px;
-    border-radius: 12px;
-    border: none;
-    font-size: 1.05em;
-    font-weight: bold;
-    background: linear-gradient(135deg, #bb33ff, #892dff);
-    color: #fff;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
-    box-shadow: 0 0 22px rgba(187,51,255,0.45);
-  }
-
-  .action-btn:disabled {
-    opacity: 0.4;
-    cursor: not-allowed;
-  }
-
-  .action-btn img {
-    width: 28px;
-    height: 28px;
-  }
-
-  .countdown {
-    margin-top: 15px;
-    font-size: 1.1em;
-    color: #ffbfff;
-  }
+.action-btn:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
 </style>
 </head>
+
 <body>
 
 <div style="text-align:center;">
@@ -195,15 +151,13 @@
 </div>
 
 <div class="container">
+
   <div class="title">
     <img src="images/pandapawnshop.jpg" alt="Panda Pawn Shop">
   </div>
 
   <div class="summary">
-    Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
-    Repay your loan to get your NFT back — or default and the NFT enters a PDA-only auction.
-    <br><br>
-    🐼 Small loans • ⏱ Short terms • 🔥 PDA burned on interest
+    Lock your Proton Pandas NFTs to access short-term PDA liquidity.
   </div>
 
   <div class="section">
@@ -213,111 +167,100 @@
 
   <div class="section preview">
     <h2>Selected NFT</h2>
-    <img id="selectedNFT" src="">
+    <img id="selectedNFT">
     <br>
     <button class="action-btn" id="lendBtn" disabled>
       Lend NFT for PDA
       <img src="images/x-icon/pda-xprpanda-65x65.png">
     </button>
-    <div class="countdown" id="countdown"></div>
   </div>
 
-  <div class="section">
-    <h2>Loan Terms</h2>
-    <div class="loan-grid">
-      <div class="loan-box">⏱ Duration<br><b>72 Hours</b></div>
-      <div class="loan-box">💰 Loan<br><b>5,000 PDA</b></div>
-      <div class="loan-box">🔥 Interest<br><b>5%</b></div>
-      <div class="loan-box">♻ Split<br><b>50% Burn / 50% Vault</b></div>
-    </div>
-  </div>
 </div>
 
 <script src="https://unpkg.com/@proton/web-sdk@latest"></script>
+
 <script>
 let session = null;
 let actor = null;
 
-// Convert ipfs:// to https
 function fixIPFS(url) {
   if (!url) return "";
-  if (url.startsWith("ipfs://")) return "https://ipfs.io/ipfs/" + url.slice(7);
+  if (url.startsWith("ipfs://")) {
+    return "https://ipfs.io/ipfs/" + url.replace("ipfs://", "");
+  }
   return url;
 }
 
-// Load NFTs from AtomicAssets
 async function loadNFTs(wallet) {
-  const nftGrid = document.getElementById("nftGrid");
-  nftGrid.innerHTML = "Loading NFTs...";
+  const grid = document.getElementById("nftGrid");
+  grid.innerHTML = "Loading NFTs...";
 
   try {
-    const resp = await fetch("https://proton.greymass.com/v1/chain/get_table_rows", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        json: true,
-        code: "atomicassets",
-        scope: wallet,
-        table: "assets",
-        limit: 50
-      })
-    });
+    const res = await fetch(
+      `https://api.atomicassets.io/atomicassets/v1/assets?owner=${wallet}&limit=50`
+    );
+    const json = await res.json();
+    grid.innerHTML = "";
 
-    const data = await resp.json();
-    nftGrid.innerHTML = "";
-
-    if (!data.rows || data.rows.length === 0) {
-      nftGrid.innerHTML = "<p>No NFTs found in wallet.</p>";
+    if (!json.data || json.data.length === 0) {
+      grid.innerHTML = "<p>No NFTs found.</p>";
       return;
     }
 
-    data.rows.forEach(nft => {
-      let imgURL = nft.data.img || nft.data.image || (nft.template?.immutable_data?.image || "");
-      imgURL = fixIPFS(imgURL);
-      const name = nft.name || nft.template?.name || "Unnamed NFT";
+    json.data.forEach(asset => {
+      const img =
+        asset.data?.img ||
+        asset.data?.image ||
+        asset.template?.immutable_data?.image;
+
+      const imageUrl = fixIPFS(img);
+      const name = asset.name || "NFT";
 
       const card = document.createElement("div");
       card.className = "nft-card";
-      card.innerHTML = `<img src="${imgURL}" alt="${name}"><div>${name}</div>`;
-      card.addEventListener("click", () => {
-        document.getElementById("selectedNFT").src = imgURL;
-        document.getElementById("lendBtn").disabled = false;
-      });
+      card.innerHTML = `
+        <img src="${imageUrl}">
+        <div>${name}</div>
+      `;
 
-      nftGrid.appendChild(card);
+      card.onclick = () => {
+        document.getElementById("selectedNFT").src = imageUrl;
+        document.getElementById("lendBtn").disabled = false;
+      };
+
+      grid.appendChild(card);
     });
-  } catch (err) {
-    console.error(err);
-    nftGrid.innerHTML = "<p>Error loading NFTs.</p>";
+
+  } catch (e) {
+    console.error(e);
+    grid.innerHTML = "<p>Error loading NFTs.</p>";
   }
 }
 
-// Connect wallet
-document.getElementById("connect-wallet-btn").addEventListener("click", async () => {
+document.getElementById("connect-wallet-btn").onclick = async () => {
   try {
-    const { session: newSession } = await ProtonWebSDK({
+    const result = await ProtonWebSDK({
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
         appName: "Panda Pawn Shop",
-        appLogo: "images/pandapawnshop.jpg" // make sure this exists
-      },
-      transportOptions: { requestAccount: "xprpandas" }
+        appLogo: "images/pandapawnshop.jpg"
+      }
     });
 
-    session = newSession;
-    if (!session || !session.auth) throw new Error("No auth returned");
+    session = result.session;
     actor = session.auth.actor;
 
-    document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
+    document.getElementById("wallet-display").innerText =
+      `✅ Connected: ${actor}`;
 
-    // Load NFTs automatically after wallet connection
-    await loadNFTs(actor);
+    loadNFTs(actor);
 
   } catch (err) {
     console.error(err);
-    document.getElementById("wallet-display").innerText = `❌ Connect failed: ${err.message}`;
+    document.getElementById("wallet-display").innerText =
+      "❌ Wallet connection failed";
   }
-});
+};
 </script>
 
 </body>
