--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta http-equiv="Content-Security-Policy"
+content="script-src 'self' https://unpkg.com 'unsafe-eval' 'unsafe-inline';">
 <title>Panda Pawn Shop</title>
 
 <style>
