--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -13,14 +13,6 @@
     color: #f5e9ff;
   }
 
-  /* Wallet Button */
-  #walletBar {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 50;
-  }
-
   #connect-wallet-btn {
     padding: 14px 22px;
     font-size: 1.05em;
@@ -62,20 +54,6 @@
     filter: drop-shadow(0 0 18px #bb33ff)
             drop-shadow(0 0 36px #a020f0)
             drop-shadow(0 0 64px #bb33ff);
-    animation: titleGlow 2.2s infinite ease-in-out;
-  }
-
-  @keyframes titleGlow {
-    0%,100% {
-      filter: drop-shadow(0 0 18px #bb33ff)
-              drop-shadow(0 0 36px #a020f0)
-              drop-shadow(0 0 64px #bb33ff);
-    }
-    50% {
-      filter: drop-shadow(0 0 30px #d175ff)
-              drop-shadow(0 0 60px #bb33ff)
-              drop-shadow(0 0 110px #d175ff);
-    }
   }
 
   .summary {
@@ -94,12 +72,6 @@
     padding: 24px;
     margin-bottom: 40px;
     box-shadow: 0 0 24px rgba(122,43,248,0.35);
-  }
-
-  .section h2 {
-    margin-top: 0;
-    color: #e2c7ff;
-    text-shadow: 0 0 10px #bb33ff;
   }
 
   .nft-grid {
@@ -140,20 +112,6 @@
     box-shadow: 0 0 28px rgba(187,51,255,0.6);
   }
 
-  .loan-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 18px;
-  }
-
-  .loan-box {
-    background:#000;
-    border:2px solid #453c2c;
-    border-radius:14px;
-    padding:16px;
-    text-align:center;
-  }
-
   .action-btn {
     margin-top: 18px;
     padding: 14px 28px;
@@ -167,23 +125,11 @@
     display: inline-flex;
     align-items: center;
     gap: 10px;
-    box-shadow: 0 0 22px rgba(187,51,255,0.45);
   }
 
   .action-btn:disabled {
     opacity: 0.4;
     cursor: not-allowed;
-  }
-
-  .action-btn img {
-    width: 28px;
-    height: 28px;
-  }
-
-  .countdown {
-    margin-top: 15px;
-    font-size: 1.1em;
-    color: #ffbfff;
   }
 </style>
 </head>
@@ -202,8 +148,6 @@
   <div class="summary">
     Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
     Repay your loan to get your NFT back — or default and the NFT enters a PDA-only auction.
-    <br><br>
-    🐼 Small loans • ⏱ Short terms • 🔥 PDA burned on interest
   </div>
 
   <div class="section">
@@ -217,19 +161,8 @@
     <br>
     <button class="action-btn" id="lendBtn" disabled>
       Lend NFT for PDA
-      <img src="images/x-icon/pda-xprpanda-65x65.png">
+      <img src="images/x-icon/pda-xprpanda-65x65.png" width="28">
     </button>
-    <div class="countdown" id="countdown"></div>
-  </div>
-
-  <div class="section">
-    <h2>Loan Terms</h2>
-    <div class="loan-grid">
-      <div class="loan-box">⏱ Duration<br><b>72 Hours</b></div>
-      <div class="loan-box">💰 Loan<br><b>5,000 PDA</b></div>
-      <div class="loan-box">🔥 Interest<br><b>5%</b></div>
-      <div class="loan-box">♻ Split<br><b>50% Burn / 50% Vault</b></div>
-    </div>
   </div>
 </div>
 
@@ -238,87 +171,79 @@
 let session = null;
 let actor = null;
 
-// ✅ YOUR BACKEND URL - READY TO GO
 const PANDA_BACKEND = "https://panda-nft-backend.onrender.com";
 
-// Load Proton Pandas ONLY from your backend
 async function loadNFTs(wallet) {
   const nftGrid = document.getElementById("nftGrid");
   nftGrid.innerHTML = "Loading Proton Pandas...";
 
   try {
     const resp = await fetch(`${PANDA_BACKEND}/api/pandas?wallet=${wallet}`);
-    if (!resp.ok) throw new Error("Backend error " + resp.status);
+    if (!resp.ok) throw new Error("Backend error");
 
     const nfts = await resp.json();
     nftGrid.innerHTML = "";
 
-    if (!nfts || nfts.length === 0) {
-      nftGrid.innerHTML = "<p>No Proton Pandas found in wallet.</p>";
+    if (!nfts.length) {
+      nftGrid.innerHTML = "<p>No Proton Pandas found.</p>";
       return;
     }
 
-    console.log("Loaded NFTs:", nfts); // DEBUG: Check what backend returns
-
     nfts.forEach(nft => {
-      const imgURL = nft.image;
-      const name = nft.name || "Proton Panda";
-
-      console.log(`Rendering ${name}: ${imgURL}`); // DEBUG: Check image URLs
-
       const card = document.createElement("div");
       card.className = "nft-card";
-      card.innerHTML = `
-        <img src="${imgURL}" 
-             alt="${name}" 
-             onerror="this.src='https://picsum.photos/150/150?random=${nft.template_id}'"
-             loading="lazy">
-        <div>${name}</div>
-      `;
-      card.addEventListener("click", () => {
-        document.getElementById("selectedNFT").src = imgURL;
-        document.getElementById("selectedNFT").onerror = () => {
-          document.getElementById("selectedNFT").src = `https://picsum.photos/260/260?random=${nft.template_id}`;
-        };
+
+      const img = document.createElement("img");
+      img.src = `${PANDA_BACKEND}${nft.image}`;
+      img.alt = nft.name;
+      img.loading = "lazy";
+      img.onerror = () => {
+        console.error("Image failed:", img.src);
+        img.style.display = "none";
+      };
+
+      card.appendChild(img);
+      card.appendChild(document.createTextNode(nft.name));
+
+      card.onclick = () => {
+        const preview = document.getElementById("selectedNFT");
+        preview.src = img.src;
+        preview.onerror = () =>
+          console.error("Preview failed:", preview.src);
+
         document.getElementById("lendBtn").disabled = false;
         window.selectedNFT = nft;
-        console.log("Selected:", nft);
-      });
+      };
 
       nftGrid.appendChild(card);
     });
+
   } catch (err) {
-    console.error("NFT load error:", err);
-    nftGrid.innerHTML = "<p>Error loading Proton Pandas. Check backend.</p>";
+    console.error(err);
+    nftGrid.innerHTML = "<p>Error loading NFTs.</p>";
   }
 }
 
-// Connect wallet
-document.getElementById("connect-wallet-btn").addEventListener("click", async () => {
+document.getElementById("connect-wallet-btn").onclick = async () => {
   try {
-    const { session: newSession } = await ProtonWebSDK({
+    const { session: s } = await ProtonWebSDK({
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
         appName: "Panda Pawn Shop",
         appLogo: "images/pandapawnshop.jpg"
-      },
-      transportOptions: { requestAccount: "xprpandas" }
+      }
     });
 
-    session = newSession;
-    if (!session || !session.auth) throw new Error("No auth returned");
+    session = s;
     actor = session.auth.actor;
-
     document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
-
-    // Load Proton Pandas automatically after wallet connection
-    await loadNFTs(actor);
+    loadNFTs(actor);
 
   } catch (err) {
+    document.getElementById("wallet-display").innerText = "❌ Wallet connect failed";
     console.error(err);
-    document.getElementById("wallet-display").innerText = `❌ Connect failed: ${err.message}`;
   }
-});
+};
 </script>
 
 </body>
