--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -4,133 +4,46 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Panda Pawn Shop</title>
-
 <style>
-  body {
-    margin: 0;
-    font-family: 'Orbitron', Arial, sans-serif;
-    background: #000;
-    color: #f5e9ff;
-  }
-
+  body { margin: 0; font-family: 'Orbitron', Arial, sans-serif; background: #000; color: #f5e9ff; }
+  #walletBar { position: fixed; top: 20px; left: 20px; z-index: 50; }
   #connect-wallet-btn {
-    padding: 14px 22px;
-    font-size: 1.05em;
-    font-weight: bold;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    background: linear-gradient(135deg, #bb33ff, #7a2bf8);
-    color: white;
-    box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
+    padding: 14px 22px; font-size: 1.05em; font-weight: bold; border-radius: 10px; border: none;
+    cursor: pointer; background: linear-gradient(135deg, #bb33ff, #7a2bf8);
+    color: white; box-shadow: 0 0 12px #bb33ff, 0 0 26px #a020f0, 0 0 48px #bb33ff;
     animation: neonPulse 2s infinite;
   }
-
   @keyframes neonPulse {
     0%,100% { box-shadow: 0 0 12px #bb33ff,0 0 26px #a020f0,0 0 48px #bb33ff; }
     50% { box-shadow: 0 0 24px #d175ff,0 0 48px #bb33ff,0 0 90px #d175ff; }
   }
-
-  #wallet-display {
-    margin-top: 10px;
-    font-size: 0.95em;
-    color: #caffff;
-  }
-
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 120px 20px 60px;
-  }
-
-  .title {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
+  #wallet-display { margin-top: 10px; font-size: 0.95em; color: #caffff; }
+  .container { max-width: 1200px; margin: 0 auto; padding: 120px 20px 60px; }
+  .title { text-align: center; margin-bottom: 30px; }
   .title img {
-    max-width: 420px;
-    width: 90%;
-    filter: drop-shadow(0 0 18px #bb33ff)
-            drop-shadow(0 0 36px #a020f0)
-            drop-shadow(0 0 64px #bb33ff);
+    max-width: 420px; width: 90%;
+    filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff);
+    animation: titleGlow 2.2s infinite ease-in-out;
   }
-
-  .summary {
-    max-width: 780px;
-    margin: 0 auto 50px;
-    text-align: center;
-    line-height: 1.7;
-    font-size: 1.05em;
-    color: #dacafa;
+  @keyframes titleGlow {
+    0%,100% { filter: drop-shadow(0 0 18px #bb33ff) drop-shadow(0 0 36px #a020f0) drop-shadow(0 0 64px #bb33ff); }
+    50% { filter: drop-shadow(0 0 30px #d175ff) drop-shadow(0 0 60px #bb33ff) drop-shadow(0 0 110px #d175ff); }
   }
-
-  .section {
-    background: #120c1f;
-    border: 2px solid #7a2bf8;
-    border-radius: 18px;
-    padding: 24px;
-    margin-bottom: 40px;
-    box-shadow: 0 0 24px rgba(122,43,248,0.35);
-  }
-
-  .nft-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 18px;
-  }
-
-  .nft-card {
-    background: #000;
-    border-radius: 14px;
-    border: 2px solid #453c2c;
-    padding: 12px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-
-  .nft-card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 0 18px #bb33ff;
-  }
-
-  .nft-card img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 8px;
-  }
-
-  .preview {
-    text-align: center;
-  }
-
-  .preview img {
-    max-width: 260px;
-    border-radius: 18px;
-    border: 3px solid #bb33ff;
-    box-shadow: 0 0 28px rgba(187,51,255,0.6);
-  }
-
-  .action-btn {
-    margin-top: 18px;
-    padding: 14px 28px;
-    border-radius: 12px;
-    border: none;
-    font-size: 1.05em;
-    font-weight: bold;
-    background: linear-gradient(135deg, #bb33ff, #892dff);
-    color: #fff;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
-  }
-
-  .action-btn:disabled {
-    opacity: 0.4;
-    cursor: not-allowed;
-  }
+  .summary { max-width: 780px; margin: 0 auto 50px; text-align: center; line-height: 1.7; font-size: 1.05em; color: #dacafa; }
+  .section { background: #120c1f; border: 2px solid #7a2bf8; border-radius: 18px; padding: 24px; margin-bottom: 40px; box-shadow: 0 0 24px rgba(122,43,248,0.35); }
+  .section h2 { margin-top: 0; color: #e2c7ff; text-shadow: 0 0 10px #bb33ff; }
+  .nft-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 18px; }
+  .nft-card { background: #000; border-radius: 14px; border: 2px solid #453c2c; padding: 12px; text-align: center; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
+  .nft-card:hover { transform: translateY(-4px); box-shadow: 0 0 18px #bb33ff; }
+  .nft-card img { width: 100%; border-radius: 10px; margin-bottom: 8px; }
+  .preview { text-align: center; }
+  .preview img { max-width: 260px; border-radius: 18px; border: 3px solid #bb33ff; box-shadow: 0 0 28px rgba(187,51,255,0.6); }
+  .loan-grid { display: grid; grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); gap: 18px; }
+  .loan-box { background:#000; border:2px solid #453c2c; border-radius:14px; padding:16px; text-align:center; }
+  .action-btn { margin-top: 18px; padding: 14px 28px; border-radius: 12px; border: none; font-size: 1.05em; font-weight: bold; background: linear-gradient(135deg, #bb33ff, #892dff); color: #fff; cursor: pointer; display: inline-flex; align-items: center; gap: 10px; box-shadow: 0 0 22px rgba(187,51,255,0.45); }
+  .action-btn:disabled { opacity: 0.4; cursor: not-allowed; }
+  .action-btn img { width: 28px; height: 28px; }
+  .countdown { margin-top: 15px; font-size: 1.1em; color: #ffbfff; }
 </style>
 </head>
 <body>
@@ -148,6 +61,8 @@
   <div class="summary">
     Lock your Proton Pandas NFTs to access short-term PDA liquidity.<br>
     Repay your loan to get your NFT back — or default and the NFT enters a PDA-only auction.
+    <br><br>
+    🐼 Small loans • ⏱ Short terms • 🔥 PDA burned on interest
   </div>
 
   <div class="section">
@@ -161,8 +76,19 @@
     <br>
     <button class="action-btn" id="lendBtn" disabled>
       Lend NFT for PDA
-      <img src="images/x-icon/pda-xprpanda-65x65.png" width="28">
+      <img src="images/x-icon/pda-xprpanda-65x65.png">
     </button>
+    <div class="countdown" id="countdown"></div>
+  </div>
+
+  <div class="section">
+    <h2>Loan Terms</h2>
+    <div class="loan-grid">
+      <div class="loan-box">⏱ Duration<br><b>72 Hours</b></div>
+      <div class="loan-box">💰 Loan<br><b>5,000 PDA</b></div>
+      <div class="loan-box">🔥 Interest<br><b>5%</b></div>
+      <div class="loan-box">♻ Split<br><b>50% Burn / 50% Vault</b></div>
+    </div>
   </div>
 </div>
 
@@ -179,72 +105,74 @@ async function loadNFTs(wallet) {
 
   try {
     const resp = await fetch(`${PANDA_BACKEND}/api/pandas?wallet=${wallet}`);
-    if (!resp.ok) throw new Error("Backend error");
+    if (!resp.ok) throw new Error("Backend error " + resp.status);
 
     const nfts = await resp.json();
     nftGrid.innerHTML = "";
 
-    if (!nfts.length) {
-      nftGrid.innerHTML = "<p>No Proton Pandas found.</p>";
+    if (!nfts || nfts.length === 0) {
+      nftGrid.innerHTML = "<p>No Proton Pandas found in wallet.</p>";
       return;
     }
 
+    console.log("Loaded NFTs:", nfts);
+
     nfts.forEach(nft => {
+      const imgURL = nft.image;
+      const name = nft.name || "Proton Panda";
+
+      console.log(`Rendering ${name}: ${imgURL}`);
+
       const card = document.createElement("div");
       card.className = "nft-card";
-
-      const img = document.createElement("img");
-      img.src = `${PANDA_BACKEND}${nft.image}`;
-      img.alt = nft.name;
-      img.loading = "lazy";
-      img.onerror = () => {
-        console.error("Image failed:", img.src);
-        img.style.display = "none";
-      };
-
-      card.appendChild(img);
-      card.appendChild(document.createTextNode(nft.name));
-
-      card.onclick = () => {
-        const preview = document.getElementById("selectedNFT");
-        preview.src = img.src;
-        preview.onerror = () =>
-          console.error("Preview failed:", preview.src);
-
+      card.innerHTML = `
+        <img src="${imgURL}" 
+             alt="${name}" 
+             loading="lazy">
+        <div>${name}</div>
+      `;
+      card.addEventListener("click", () => {
+        document.getElementById("selectedNFT").src = imgURL;
         document.getElementById("lendBtn").disabled = false;
         window.selectedNFT = nft;
-      };
+        console.log("Selected:", nft);
+      });
 
       nftGrid.appendChild(card);
     });
-
   } catch (err) {
-    console.error(err);
-    nftGrid.innerHTML = "<p>Error loading NFTs.</p>";
+    console.error("NFT load error:", err);
+    nftGrid.innerHTML = "<p>Error loading Proton Pandas. Check backend.</p>";
   }
 }
 
-document.getElementById("connect-wallet-btn").onclick = async () => {
+// Connect wallet
+document.getElementById("connect-wallet-btn").addEventListener("click", async () => {
   try {
-    const { session: s } = await ProtonWebSDK({
+    const { session: newSession } = await ProtonWebSDK({
       linkOptions: { endpoints: ["https://proton.greymass.com"] },
       selectorOptions: {
         appName: "Panda Pawn Shop",
         appLogo: "images/pandapawnshop.jpg"
-      }
+      },
+      transportOptions: { requestAccount: "xprpandas" }
     });
 
-    session = s;
+    session = newSession;
+    if (!session || !session.auth) throw new Error("No auth returned");
     actor = session.auth.actor;
+
     document.getElementById("wallet-display").innerText = `✅ Connected: ${actor}`;
-    loadNFTs(actor);
+
+    await loadNFTs(actor);
 
   } catch (err) {
-    document.getElementById("wallet-display").innerText = "❌ Wallet connect failed";
     console.error(err);
+    document.getElementById("wallet-display").innerText = `❌ Connect failed: ${err.message}`;
   }
-};
+});
 </script>
 
 </body>
 </html>
+
