--- a/pandapawnshop.html
+++ b/pandapawnshop.html
@@ -92,8 +92,9 @@
   </div>
 </div>
 
-<script src="https://unpkg.com/@proton/web-sdk@latest"></script>
-<script>
+<script type="module">
+import { ProtonWebSDK } from 'https://unpkg.com/@proton/web-sdk@latest/dist/module/index.js';
+
 let session = null;
 let actor = null;
 
@@ -118,41 +119,33 @@ async function loadNFTs(wallet) {
     console.log("Loaded NFTs:", nfts);
 
     nfts.forEach(nft => {
-      // Use backend proxy URL first
-      const proxyURL = `${PANDA_BACKEND}/api/panda-image/${nft.template_id}`;
-      // Fallback URL if proxy fails
-      const fallbackURL = `https://nft.xprnetwork.org/144534352512/${nft.template_id}`;
-      const name = nft.name || `Proton Panda`;
+      const imgURL = nft.image;
+      const name = nft.name || "Proton Panda";
+
+      console.log(`Rendering ${name}: ${imgURL}`);
 
       const card = document.createElement("div");
       card.className = "nft-card";
       card.innerHTML = `
-        <img src="${proxyURL}" 
+        <img src="${imgURL}" 
              alt="${name}" 
+             onerror="this.src='https://picsum.photos/150/150?random=${nft.template_id}'" 
              loading="lazy">
         <div>${name}</div>
       `;
-
-      // Click to select
       card.addEventListener("click", () => {
-        const selectedImg = document.getElementById("selectedNFT");
-        selectedImg.src = proxyURL;
-        // If proxy fails, use fallback
-        selectedImg.onerror = () => {
-          selectedImg.src = fallbackURL;
+        const selectedNFTImg = document.getElementById("selectedNFT");
+        selectedNFTImg.src = imgURL;
+        selectedNFTImg.onerror = () => {
+          selectedNFTImg.src = `https://picsum.photos/260/260?random=${nft.template_id}`;
         };
         document.getElementById("lendBtn").disabled = false;
         window.selectedNFT = nft;
         console.log("Selected:", nft);
       });
 
-      // If proxy fails in grid, fallback immediately
-      const imgEl = card.querySelector("img");
-      imgEl.onerror = () => { imgEl.src = fallbackURL; };
-
       nftGrid.appendChild(card);
     });
-
   } catch (err) {
     console.error("NFT load error:", err);
     nftGrid.innerHTML = "<p>Error loading Proton Pandas. Check backend.</p>";
